# reading-group-serialization

./: .clang-format  .cmake-format.py  .gitmodules  Notes.md  README.md
examples/: ExampleIdlData.idl
examples/cpp/: CMakeLists.txt  ExampleIdlData.cpp  ExampleIdlData.hpp  ReceiveDataFromPython.cpp  RecvDataCereal.cpp  RecvDataDDS.cpp  RecvDataDDSFromPython.cpp  SendData.cpp  SendDataCereal.cpp  SendDataDDS.cpp  SendDataDDSToPython.cpp  cerealHelper.hpp  npyHelper.hpp
examples/python/: receive_data.py  receive_data_dds.py  send_data.py  send_data_dds.py
examples/python/ExampleIdlData/: .idlpy_manifest  _ExampleIdlData.py  __init__.py
